# app/Query/Request/ProjectTagQuery.php
@@ -3,57 +3,27 @@
 namespace App\Query\Request;
 
 use Illuminate\Support\Facades\DB;
-use App\Model\Core\Tag;
+use App\Model\Core\ProjectTag;
 
 use Illuminate\Http\Request;
 use Illuminate\Validation\ValidationException;
 use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Support\Facades\Validator;
-use App\Query\Abstraction\ITagQuery;
+use App\Query\Abstraction\IProjectTagQuery;
 
 
-class TagQuery implements ITagQuery
+class ProjectTagQuery implements IProjectTagQuery
 {
-    private $name   = 'name';
-    private $class   = 'class';
-    private $category  = 'category';
-    private $default = 'default';
-    private $active  = 'active';
-
-    //Index: Página principal
-    public function index(Request $request)
-    {
-        try {
-            //Devuelve todos los TASKS existentes
-            $tag = Tag::query()
-                ->select([
-                    'id',
-                    'name',
-                    'class',
-                    'category',
-                    'default',
-                    'active',
-                ])
-                ->category($request->category)
-                ->default($request->default)
-                ->get();
-
-            return response()->json(['tags' => $tag]);
-        } catch (\Exception $e) {
-            return response()->json(['message' => 'Algo salio mal!', 'error' => $e->getMessage()], 400);
-        }
-    }
+    private $tag_id   = 'tag_id';
+    private $project_id   = 'project_id';
 
     //Store: Guardar datos en la BD
     public function store(Request $request)
     {
         //Rules: Especificaciones a validar
         $rules = [
-            $this->name    => 'required|string|min:1|max:60|',
-            $this->class    => 'required|string|min:1|max:60|',
-            $this->category    => 'required|string|min:1|max:60|',
-            $this->default    => 'boolean',
-            $this->active    => 'boolean',
+            $this->tag_id    => 'required|min:1|max:60',
+            $this->project_id    => 'required|min:1|max:60',
 
         ];
         try {
@@ -68,19 +38,16 @@ class TagQuery implements ITagQuery
 
         try {
             //Recepción de datos y guardado en la BD
-            $tag = new Tag([
-                $this->name => $request->name,
-                $this->class => $request->class,
-                $this->category => $request->category,
-                $this->default => $request->default,
-                $this->active => $request->active,
+            $projecttag = new ProjectTag([
+                $this->tag_id => $request->tag_id,
+                $this->project_id => $request->project_id,
             ]);
 
-            $tag->save();
+            $projecttag->save();
 
             return response()->json([
                 'data' => [
-                    'tag' => $tag,
+                    'projecttag' => $projecttag,
                 ],
                 'message' => 'Tag creado correctamente!'
             ], 201);
@@ -95,7 +62,7 @@ class TagQuery implements ITagQuery
 
         if ($id) {
             try {
-                $tg = Tag::findOrFail($id);
+                $tg = ProjectTag::findOrFail($id);
 
                 if ($tg) {
                     //Select a la BD: TB_tasks
@@ -125,57 +92,6 @@ class TagQuery implements ITagQuery
         }
     }
 
-    //Update: Actualiza los datos en la BD
-    public function update(Request $request, int $id)
-    {
-        if ($id) {
-
-            //Rules: Especificaciones a validar
-            $rules = [
-                $this->name    => 'required|string|min:1|max:60',
-                $this->category    => 'required|string|min:1|max:60',
-                $this->class    => 'required|string|min:1|max:60',
-                $this->default    => 'boolean',
-                $this->active    => 'boolean',
-
-            ];
-            try {
-                // Ejecutamos el validador y en caso de que falle devolvemos la respuesta
-                $validator = Validator::make($request->all(), $rules);
-                if ($validator->fails()) {
-                    throw (new ValidationException($validator->errors()->getMessages()));
-                }
-            } catch (\Exception $e) {
-                return response()->json(['message' => 'Los datos ingresados no son validos!', 'error' => $e], 400);
-            }
-
-            try {
-                //Consulta por Id
-                $tag = Tag::findOrFail($id);
-                //Actualización de datos
-                $tag->name = $request->name ?? $tag->name;
-                $tag->class = $request->class ?? $tag->class;
-                $tag->category = $request->category ?? $tag->category;
-                $tag->default = $request->default ?? $tag->default;
-                $tag->active = $request->active ?? $tag->active;
-
-                $tag->save();
-
-                return response()->json([
-                    'data' => [
-                        'tag' => $tag,
-                    ],
-                    'message' => 'Tag actualizado con éxito!'
-                ], 201);
-            } catch (ModelNotFoundException $ex) {
-                return response()->json(['message' => "Tag con id {$id} no existe!", 'error' => $ex->getMessage()], 404);
-            } catch (\Exception $e) {
-                return response()->json(['message' => 'Algo salio mal!', 'error' => $e->getMessage()], 400);
-            }
-        } else {
-            return response()->json(['message' => 'Algo salio mal!', 'error' => 'Falto ingresar ID'], 400);
-        }
-    }
 
     //Destroy: Elimina un resgistro de la BD
     public function destroy(Request $request, int $id)
@@ -183,7 +99,7 @@ class TagQuery implements ITagQuery
         if ($id) {
             try {
                 //Delete por id
-                $tag = Tag::findOrFail($id);
+                $tag = ProjectTag::findOrFail($id);
                 $tag->delete();
                 return response()->json([
                     'data' => [
@@ -207,7 +123,7 @@ class TagQuery implements ITagQuery
                 ////Comprobar existencia
                 //$existencia = Option::find($id)->firstOrFail();
                 //Consultar option
-                $tag = Tag::find($id);
+                $tag = ProjectTag::find($id);
                 //Aplicar relación
                 $tag->projects;
 
