# storage/api-docs/api-docs.json
@@ -2649,6 +2649,153 @@
                 ]
             }
         },
+        "/projecttag/store": {
+            "post": {
+                "tags": [
+                    "ProjectTag"
+                ],
+                "summary": "Store ProjectTag",
+                "description": "Store ProjectTag",
+                "operationId": "storeProjectTag",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ProjectTag"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/projecttag/showbyid/{id}": {
+            "get": {
+                "tags": [
+                    "ProjectTag"
+                ],
+                "summary": "Get One ProjectTag By one Id",
+                "description": "Return One ProjectTag",
+                "operationId": "getProjectTagById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Tag Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/projecttag/destroy/{id}": {
+            "delete": {
+                "tags": [
+                    "ProjectTag"
+                ],
+                "summary": "Delete One ProjectTag By one Id",
+                "description": "Delete One ProjectTag",
+                "operationId": "getDestroyTagById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ProjectTag Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/projecttag/showprojectbyid/{id}": {
+            "get": {
+                "tags": [
+                    "ProjectTag"
+                ],
+                "summary": "Get One ProjectTag By one Id",
+                "description": "Return One ProjectTag by Id",
+                "operationId": "getShowProjectById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Show ProjectTag by Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/rol/index": {
             "get": {
                 "tags": [
@@ -4280,6 +4427,23 @@
                         "description": "Name of the Project",
                         "type": "string",
                         "example": "Name Project"
+                    }
+                },
+                "type": "object"
+            },
+            "ProjectTag": {
+                "title": "ProjectTag",
+                "description": "ProjectTag body data",
+                "properties": {
+                    "tag_id": {
+                        "title": "tag_id",
+                        "description": "tag_id of the ProjectTag",
+                        "example": 1
+                    },
+                    "project_id": {
+                        "title": "project_id",
+                        "description": "project_id of the ProjectTag",
+                        "example": 1
                     }
                 },
                 "type": "object"
